--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   get: ^4.6.5
   firebase_auth: ^4.4.0
   firebase_core: ^2.9.0
+  firebase_database: 10.1.0
 
 dev_dependencies:
   flutter_test:
