--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ version: 1.0.0+1
 environment:
   sdk: '>=2.18.6 <3.0.0'
 
-
 dependencies:
   flutter:
     sdk: flutter
@@ -33,23 +32,24 @@ dependencies:
   firebase_core: ^2.9.0
   firebase_database: 10.1.0
   cloud_firestore: ^4.5.1
+  mockito: ^5.4.0
+  fake_cloud_firestore: ^2.4.1+1
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
 
-  
-
 flutter_native_splash:
   image: assets/splash.jpg
   color: "#ffffff"
 
-
-
 flutter:
   uses-material-design: true
-  assets: 
+  assets:
     - assets/
 
-  
+flutter_intl:
+  enabled: true
